# Technical-Research-AI-Assistant

./: .gitignore  pyproject.toml
research-agent/src/: main.py
research-agent/src/agents/: orchestrator_graph.py  orchestrator_nodes.py
research-agent/src/api/: __init__.py  dependency_injection.py
research-agent/src/api/controllers/: agent_controller.py
research-agent/src/config/: constants.py  settings.py
research-agent/src/domain/interfaces/: llm_interaction_interface.py  orchestrator_processing_interface.py  tools_interface.py
research-agent/src/domain/prompts/: orchestrator_prompts.py
research-agent/src/domain/states/: orchestrator_state.py
research-agent/src/exceptions/: app_exceptions.py
research-agent/src/infrastructure/database/: config_service.py  database_engine.py
research-agent/src/infrastructure/llm/: bootstrap.py  embedding_service.py  llm_service.py
research-agent/src/infrastructure/llm/providers/: base.py  openai_provider.py  openrouter_provider.py  provider_factory.py
research-agent/src/services/: llm_interaction_service.py  orchestrator_processing_service.py  tools_service.py
